<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/loginbak"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="登录"
        android:paddingTop="20dip"
        android:textSize="25dip" />

    <RelativeLayout
        android:id="@+id/loginView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
      	android:gravity="center_vertical"
      	android:layout_marginTop="60dip"
       
       
       
        >
        	<EditText android:id="@+id/login_edit_account"
				android:background="@drawable/edit_login" android:paddingLeft="45.0sp"
				android:saveEnabled="true" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_marginLeft="5.0dip"
				android:layout_marginTop="25.0dip" android:layout_marginRight="5.0dip"
				android:layout_marginBottom="5.0px" android:hint="@string/strInputAccHint"
				android:maxLength="10" 
				
				android:layout_alignParentTop="true" android:inputType="number" />
			<TextView android:textSize="16.0dip" android:textColor="#ff3f3f3f"
				android:gravity="center_vertical" android:id="@+id/TextView01"
				
				android:paddingLeft="7.0sp" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginRight="15.0sp"
				android:text="@string/strAccInputLabel" android:layout_alignLeft="@+id/login_edit_account"
				android:layout_alignTop="@+id/login_edit_account"
				android:layout_alignBottom="@+id/login_edit_account" />
			<EditText android:id="@+id/login_edit_pwd"
				android:background="@drawable/edit_login" android:paddingLeft="45.0sp"
				android:saveEnabled="true" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginRight="1.0dip"
				android:maxLength="16" android:layout_below="@+id/login_edit_account"
				android:layout_alignLeft="@+id/login_edit_account"
				android:layout_marginTop="3.0dip"
				android:layout_alignRight="@+id/login_edit_account"
				android:inputType="textPassword" />
			<TextView android:textSize="16.0dip" android:textColor="#ff3f3f3f"
				android:gravity="center_vertical" android:id="@+id/TextView02"
				android:paddingLeft="7.0sp" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/strPswInputLabel"
				android:layout_alignTop="@+id/login_edit_pwd"
				android:layout_alignRight="@+id/TextView01"
				android:layout_alignBottom="@+id/login_edit_pwd" />

			<Button android:id="@+id/login_btn_login" android:layout_width="130dip"
				android:layout_height="82.0px" android:layout_marginTop="7.0px"
			 android:text="@string/login"
				android:layout_below="@+id/TextView02"
			android:layout_toRightOf="@+id/login_cb_savepwd"

				
				 />
				<Button android:id="@+id/login_btn_reg" android:layout_width="230.0px"
				android:layout_height="82.0px" android:layout_marginTop="7.0px"
				
		
				android:text="@string/reg"
				android:layout_below="@+id/TextView02"
			android:layout_toRightOf="@+id/login_btn_login"

				
				 />

			<CheckBox
			    android:id="@+id/login_cb_savepwd"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignBaseline="@+id/login_btn_login"
			    android:layout_toRightOf="@drawable/btn_check"
			    android:button="@drawable/btn_check"
			    android:checked="true"
			    android:paddingLeft="0.0px"
			    android:paddingRight="10dip"
			    android:text="       记住密码"
			    android:textColor="#ff222222"
			    android:textSize="16.0sp" />
			</RelativeLayout>




</LinearLayout>